# lxmusic

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
lxmusic/: __init__.py  cli.py  client.py  config.py  errors.py  main.py  mcp_server.py  mcp_xiaozhi.py  models.py  playurl.py  storage.py
lxmusic/sources/: __init__.py  local.py  tx.py  wy.py
skills/: lxmusic.md
tests/: test_tx_music.py
