[project]
name = "lxmusic"
version = "0.1.0"
description = "QQ Music & NetEase CLI + MCP — search, play, playlist management"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "mcp>=1.0",
    "pyyaml>=6.0",
    "websockets>=12.0",
]

[project.scripts]
lxmusic = "lxmusic.main:main"

[tool.setuptools]
packages = {find = {include = ["lxmusic*"]}}

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
